# wxgl-demo-app

./: .clangd  2  CMakeLists.txt  README.md
include/: app.h  canvas.h  mainfram.h  sidepanel.h
src/: app.cpp  canvas.cpp  mainframe.cpp  sidepanel.cpp
